--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Hello dogs and cats</title>
-</head>
-<body>
-  <h1>Welcome to</h1>
-Hello, world!
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Hello</title>
+  </head>
+  <body>
+    Welcome
+  </body>
 </html>
